--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-react-views": "^0.10.2",
