--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^2.2.4",
     "multer": "^1.1.0",
     "path": "^0.12.7",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
