--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.1",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
+    "events": "^1.1.0",
     "express": "^4.13.4",
     "express-react-views": "^0.10.2",
     "express-session": "^1.13.0",
